welcome.lessons.welcome.variables.Variables.scala.code
nbPas:Int =0
while(estSurBiscuit==false & porteBiscuit==false){
	avancer(nbPas);
	prendBiscuit();
	reculer(nbPas);
	poseBiscuit(nbPas);
	nbPas==nbPas+1

}
